# vegravis

./: .gitignore  CNAME  Cargo.toml  README.md  build.rs  dist-workspace.toml  fmt_n_check.sh  index.html  rust-toolchain.toml  sw.js  vegravis-0c8c65ff4db01ddd99c4aae2b6013c724518688b08288b59a4935585b735c2721883e1fc78aae932c202440ee9253214.js  vegravis-0c8c65ff4db01ddd99c4aae2b6013c724518688b08288b59a4935585b735c2721883e1fc78aae932c202440ee9253214_bg.wasm  vegravis-3bfcdda29fea1fbe.js  vegravis-3bfcdda29fea1fbe_bg.wasm  vegravis-53b3ef9e25c3ad37.js  vegravis-53b3ef9e25c3ad37_bg.wasm  vegravis-66fe7e6173f30fb8.js  vegravis-66fe7e6173f30fb8_bg.wasm  vegravis-68e561bf2b6a002.js  vegravis-68e561bf2b6a002_bg.wasm
.github/workflows/: pages.yml  rust.yml
assets/: manifest.json
sample_codes/: multi_rotated_rect  rotated_rect  simple_rect  simple_square  vector_ikun  vegravis_icon
src/: any_data.rs  app.rs  default_code  interfaces.rs  lib.rs  main.rs  sample_codes_list.rs  syntax.rs
src/code_parser/: mod.rs
src/common_vec_op/: data_src.rs  gen.rs  generator.rs  mod.rs  parser.rs  syntax.rs  visualizer.rs
src/common_vec_op/ops/: mod.rs  op_cubi.rs  op_end.rs  op_line.rs  op_move.rs  op_pop_trans.rs  op_push_rotate.rs  op_push_scale.rs  op_push_skew.rs  op_push_trans.rs  op_push_translate.rs  op_quad.rs
src/cus_component/: code_editor.rs  mod.rs
src/sample_codes/: default_code
src/vec_line_gen/: mod.rs
wix/: main.wxs
