[package]
name = "vegravis"
version = "0.2.0"
edition = "2021"
homepage = "https://github.com/W-Mai/vegravis"
readme = "README.md"
authors = ["W-Mai", "Benign X"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ecolor = "0.24.0"
egui_plot = "0.24.0"
egui_extras = "0.24.0"
egui_code_editor = "0.1.9"

log = "0.4.19"

levenshtein = "*"

dyn-clone = "1.0.16"

# native:
[target.'cfg(all(not(target_arch = "wasm32"), platform = "macos"))'.dependencies]
eframe = { version = "0.24.0", default-features = false, features = [
    "__screenshot",
    "default_fonts",
    "wgpu",
] }
env_logger = "0.10"

[target.'cfg(all(not(target_arch = "wasm32"), not(platform = "macos")))'.dependencies]
eframe = { version = "0.24.0", default-features = false, features = [
    "__screenshot",
    "default_fonts",
    "glow",
] }
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
eframe = { version = "0.24.0", default-features = false, features = [
    "__screenshot",
    "default_fonts",
    "glow",
] }
wasm-bindgen-futures = "0.4"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
