[package]
name = "vegravis"
version = "0.2.1"
edition = "2021"
homepage = "https://github.com/W-Mai/vegravis"
repository = "https://github.com/W-Mai/vegravis"
readme = "README.md"
license-file = "LICENSE"
description = "Vegravis is a vector graphics visualizer.It can visualize vector graphics on a canvas, and can also visualize vector graphics in other formats through conversion."
authors = ["W-Mai", "Benign X"]

[package.metadata.wix]
upgrade-guid = "A450F613-B486-4556-8FD8-B60406F07E43"
path-guid = "7FE22DC6-25EC-4DB4-B5BB-1BBEEFF659F1"
license = false
eula = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ecolor = "0.29.1"
egui_plot = "0.29.0"
egui_extras = "0.29.1"
egui_code_editor = "0.2.10"

log = "0.4.19"

levenshtein = "1.0.5"

dyn-clone = "1.0.16"
web-sys = { version = "0.3.72", features = ["History"] }
serde = { version = "1.0.215", features = ["derive"] }

# native:
[target.'cfg(all(not(target_arch = "wasm32"), platform = "macos"))'.dependencies]
eframe = { version = "0.29.1", default-features = false, features = [
    "__screenshot",
    "default_fonts",
    "wgpu",
] }
env_logger = "0.11.5"

[target.'cfg(all(not(target_arch = "wasm32"), not(platform = "macos")))'.dependencies]
eframe = { version = "0.29.1", default-features = false, features = [
    "__screenshot",
    "default_fonts",
    "glow",
] }
env_logger = "0.11.5"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
eframe = { version = "0.29.1", default-features = false, features = [
    "__screenshot",
    "default_fonts",
    "glow",
    "persistence"
] }
wasm-bindgen-futures = "0.4"
serde_qs = "0.13.0"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
